Fix wrapping of service name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,7 @@ $govuk-assets-path: "/govuk/assets/";
 @import "govuk-prototype-components/x-govuk/all";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+.nhsuk-header__service-name {
+  max-width: none !important;
+}
